updating deleting ProductPhoto Preview and Catalogue photos, update SimplifiedProductResponse